# SKYES_PYTHON_PACKAGE_TEMPLATE

./: .gitignore  README.md  build.nu  flake.nix  pyproject.toml
lib/package/: main.py
nix/: shell.nix
